--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
         <hr />
         <h2>Others</h2>
         <ul>
-            <li><a href="./Public/Hobbies">My Hobbies</a></li>
-            <li><a href="./Public/Contact">Contact Me</a></li>
+            <li><a href="./Public/hobbies.html">My Hobbies</a></li>
+            <li><a href="./Public/contact.html">Contact Me</a></li>
         </ul>
         <footer>
             <p>&copy; 2026 AkinolaDgr8. All Rights Reserved.</p>
         </footer>
     </body>
+
 </html>
